--- a/src/views/main.html
+++ b/src/views/main.html
@@ -25,7 +25,7 @@
 
         <!-- ALFREDO -->
 
-        <img id="alfredo" src="../assets/alfredo.png" alt="Alfredo" onclick=moveToRandom()>
+        <img id="alfredo" src="../assets/alfredo.png" alt="Alfredo" onclick=onClick()>
 
         <!-- CUSTOM MENU -->
 
@@ -33,6 +33,8 @@
             <ul class = "menuItems">
                 <li class = "items"><a href = "#" onclick="mRandomPosition();return false;"> RandomPosition </a></li>
                 <li class = "items"><a href = "#" onclick="mCenterPosition();return false;"> CenterPosition </a></li>
+                <li class = "items"><a href = "#" onclick="mTopLeftPosition();return false;"> TopLeftPosition </a></li>
+                <li class = "items"><a href = "#" onclick="mBottomRightPosition();return false;"> BottomRightPosition </a></li>
                 <li class = "items"><a href = "#" onclick="mExit();return false;"> Exit </a></li>
             </ul>
         </div>
