--- a/src/views/main.html
+++ b/src/views/main.html
@@ -14,6 +14,8 @@
 
     </head>
 
+    <script src="../app/alfredo.js"></script>
+    <script src="../app/animation.js"></script>
     <script src="../app/behavior.js"></script>
     <script src="../app/display.js"></script>
     <script src="../app/init.js"></script>
@@ -31,11 +33,11 @@
 
         <div id = "customContextMenu" style = "display: none;">
             <ul class = "menuItems">
-                <li class = "items"><a href = "#" onclick="mRandomPosition();return false;"> RandomPosition </a></li>
-                <li class = "items"><a href = "#" onclick="mCenterPosition();return false;"> CenterPosition </a></li>
-                <li class = "items"><a href = "#" onclick="mTopLeftPosition();return false;"> TopLeftPosition </a></li>
-                <li class = "items"><a href = "#" onclick="mBottomRightPosition();return false;"> BottomRightPosition </a></li>
-                <li class = "items"><a href = "#" onclick="mExit();return false;"> Exit </a></li>
+                <li class = "items"><a href = "#" onclick="moveToPercent(0.5, 0.5);;return false;"> CenterPosition </a></li>
+                <li class = "items"><a href = "#" onclick="moveToPercent(0, 0);return false;"> TopLeftPosition </a></li>
+                <li class = "items"><a href = "#" onclick="setAnimation('alfredo.png');return false;"> StandStill </a></li>
+                <li class = "items"><a href = "#" onclick="setAnimation('walk.gif');return false;"> Walk </a></li>
+                <li class = "items"><a href = "#" onclick="window.close();;return false;"> Exit </a></li>
             </ul>
         </div>
 
