--- a/src/views/main.html
+++ b/src/views/main.html
@@ -27,7 +27,7 @@
 
         <!-- ALFREDO -->
 
-        <img id="alfredo" src="../assets/alfredo.png" alt="Alfredo" onclick=onClick()>
+        <img id="alfredo" src="../assets/idle.gif" alt="Alfredo" onclick=onClick()>
 
         <!-- CUSTOM MENU -->
 
@@ -35,7 +35,7 @@
             <ul class = "menuItems">
                 <li class = "items"><a href = "#" onclick="moveToPercent(0.5, 0.5);;return false;"> CenterPosition </a></li>
                 <li class = "items"><a href = "#" onclick="moveToPercent(0, 0);return false;"> TopLeftPosition </a></li>
-                <li class = "items"><a href = "#" onclick="setAnimation('alfredo.png');return false;"> StandStill </a></li>
+                <li class = "items"><a href = "#" onclick="setAnimation('idle.gif');return false;"> StandStill </a></li>
                 <li class = "items"><a href = "#" onclick="setAnimation('walk.gif');return false;"> Walk </a></li>
                 <li class = "items"><a href = "#" onclick="window.close();;return false;"> Exit </a></li>
             </ul>
