--- a/src/views/main.html
+++ b/src/views/main.html
@@ -27,7 +27,7 @@
 
         <!-- ALFREDO -->
 
-        <img id="alfredo" src="../assets/idle.gif" alt="Alfredo" onclick=onClick()>
+        <img id="alfredo" draggable="false" src="../assets/idle.gif" alt="Alfredo" onclick=onClick()>
 
         <!-- CUSTOM MENU -->
 
