--- a/src/views/main.html
+++ b/src/views/main.html
@@ -19,6 +19,7 @@
     <script src="../app/behavior.js"></script>
     <script src="../app/display.js"></script>
     <script src="../app/init.js"></script>
+    <script src="../app/input.js"></script>
     <script src="../app/menu.js"></script>
     <script src="../app/movement.js"></script>
     <script src="../app/screens.js"></script>
