walk in da park

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -28,7 +28,7 @@
 
         <!-- ALFREDO -->
 
-        <img id="alfredo" draggable="false" src="../assets/idle.gif" alt="Alfredo" onclick=onClick()>
+        <img id="alfredo" draggable="false" src="../assets/idle.gif" alt="Alfredo-Looking-Right" onclick=onClick()>
 
         <!-- CUSTOM MENU -->
 
@@ -36,8 +36,8 @@
             <ul class = "menuItems">
                 <li class = "items"><a href = "#" onclick="moveToPercent(0.5, 0.5);;return false;"> CenterPosition </a></li>
                 <li class = "items"><a href = "#" onclick="moveToPercent(0, 0);return false;"> TopLeftPosition </a></li>
-                <li class = "items"><a href = "#" onclick="setAnimation('idle.gif');return false;"> StandStill </a></li>
-                <li class = "items"><a href = "#" onclick="setAnimation('walk.gif');return false;"> Walk </a></li>
+                <li class = "items"><a href = "#" onclick="aniIdle();return false;"> Idle </a></li>
+                <li class = "items"><a href = "#" onclick="aniWalk();return false;"> Walk </a></li>
                 <li class = "items"><a href = "#" onclick="window.close();;return false;"> Exit </a></li>
             </ul>
         </div>
