--- a/src/views/main.html
+++ b/src/views/main.html
@@ -35,9 +35,8 @@
         <div id = "customContextMenu" style = "display: none;">
             <ul class = "menuItems">
                 <li class = "items"><a href = "#" onclick="moveToPercent(0.5, 0.5);;return false;"> CenterPosition </a></li>
-                <li class = "items"><a href = "#" onclick="moveToPercent(0, 0);return false;"> TopLeftPosition </a></li>
                 <li class = "items"><a href = "#" onclick="aniIdle();return false;"> Idle </a></li>
-                <li class = "items"><a href = "#" onclick="aniWalk();return false;"> Walk </a></li>
+                <li class = "items"><a href = "#" onclick="promptWalk();return false;"> (x,y) walk </a></li>
                 <li class = "items"><a href = "#" onclick="window.close();;return false;"> Exit </a></li>
             </ul>
         </div>
