--- a/src/styles/speech.css
+++ b/src/styles/speech.css
@@ -20,16 +20,21 @@
     background-color: rgb(68, 219, 238);
     color: black;
     text-align: center;
-    width: auto; /* Set width to auto to make it adjust to content */
-    max-width: 150px; /* Optionally set max-width for the form */
-    height: 100px;
-    top: 75px;
-    left: 40px;
+    width: 150px;
+    height: 35px;
+    top: 80px;
+    left: 25px;
     border-radius: 15px;
     padding: 0px;
 }
 
 #inputField {
-    width: auto;
-    height: auto;
+    border-radius: 10px;
+    position: absolute;
+    top:6px;
+    left:4px;
+    width: 130px;
+    height: 18px;
+    vertical-align: top;
+    padding-left: 5px;
 }
