--- a/src/views/main.html
+++ b/src/views/main.html
@@ -72,6 +72,7 @@
                 <li class = "items"><a href = "#" onclick="aniIdle();return false;"> Idle </a></li>
                 <li class = "items"><a href = "#" onclick="promptWalk();return false;"> (x,y) walk </a></li>
                 <li class = "items"><a href = "#" onclick="dance();return false;"> Dance </a></li>
+                <li class = "items"><a href = "#" onclick="spin();return false;"> Spin </a></li>
                 <li class = "items"><a href = "#" onclick="window.close();;return false;"> Exit </a></li>
             </ul>
         </div>
